[build-system]
requires = [
    "setuptools>=61.3.1",
    "setuptools_scm>=8.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "tropycal"
description = "Package for retrieving and analyzing tropical cyclone data"
readme = "README.md"
authors = [
    {name = "Tomer Burg"},
    {name = "Sam Lillo"}
]
keywords = ["meteorology", "weather"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"
dependencies = [
    "matplotlib>=2.2.2",
    "numpy>=1.14.3",
    "scipy>=1.1.0",
    "xarray>=0.10.7",
    "pandas>=1.3.0",
    "networkx>=2.0.0",
    "requests>=2.22.0",
    "pyshp>=2.1"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://tropycal.github.io/tropycal/"
"Source Code" = "https://github.com/tropycal/tropycal"

[tool.setuptools_scm]
write_to = "src/tropycal/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "1.3.0"
write_to_template = '''"""Version information."""
__version__ = "{version}"
version = __version__  # backwards compatibility
'''

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
